# ZoeDepth

./: pyproject.toml
test/: test.py
zoedepth/models/base_models/: midas.py
